# ironshell3

./: .ironignore  DOCKERFILE  README.md  blacklist.yaml  docker-compose.yml  excludes.yaml  ironshell.spec  main.py  profileschema.yaml  pyproject.toml  requirements.txt  web.py
.github/workflows/: ci.yml
docs/: github_sarif_upload.mb
github/workflows/: pr_comment.yml  pypi_publish.yml  release.yml  sarif_upload.yml
profiles/: fast_scan.yaml
scanners/: __init__.py  bandit.py  brakeman.py  checkov.py  custom_scanner.py  dockle.py  eslint.py  gitleaks.py  kube_bench.py  kubesec.py  license_checker.py  osv_scanner.py  semgrep.py  syft.py  tfsec.py  trafflehog.py  trivy.py  zap.py
templates/: html_report.j2
tests/: test_gitleaks.py  test_main.py
utils/: blacklist.py  cleanup.py  email_notify.py  gen_scanner_hashes.py  integrity.py  jira_notify.py  licence_audit.py  logger.py  notify.py  profile.py  profile_validate.py  remediation.py  report.py  report.sarif.py  report_utils.py  sandbox.py  sbom.py  update.py  webhook.py
web/: api.py  auth.py  auth_oauth.py  celery_worker.py  db.py  tasks.py
